# Thoki2

./: Cargo.toml  README.md  build.sh  makefile  thoki-compilation-guide.docx
.github/workflows/: build-linux-to-win.yml  build-linux.yml  build-macos.yml  release-linux.yml  release-macos.yml  release-windows.yml
src/: main.rs  modules.rs
src/helpers/: helpers.rs
src/modules/: cpu_limit.rs  filesystem_scan.rs  process_check.rs
