[package]
name = "thoki"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.*"
walkdir = "2.3.*"
rustop = "1.1.*"
arrayvec = "0.7.*"
flexi_logger = "*"
sysinfo = "0.28.4"
human_bytes = "0.4.*"
filesize = "*"
file-format = "*"
csv = "1.1.*"
md5 = "*"
sha1 = "*"
sha2 = "0.10.*"
hex = "0.4.*"
memmap = "0.7.*"
chrono = "*"

[target.'cfg(unix)'.dependencies]
yara = { version="*", features=["yara-static"] }

[target.'cfg(windows)'.dependencies]
yara = { version="*", features=["bundled-4_2_3"] }
windows-sys = { version = "0.60.2", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }
